--- a/css/style.css
+++ b/css/style.css
@@ -18,21 +18,6 @@
     
 }
 
-/* .dot2{
-    width: 8px;
-    height: 8px;
-    border-radius: 50%;
-    position: absolute;
-    background-color: skyblue;
-    
-} */
-
-/* .butterfly{
-    height: 3rem;
-    width: 3rem;
-} */
-
-
 .mike{
     border-radius: 100%;
     height: 5rem;
@@ -126,13 +111,14 @@ header .about{
     justify-content: center;
     background-color: skyblue;
     color: #fff;
-    position: fixed;
     display: flex;
     scale: 1.2;
     gap: 1.5rem;
     z-index: 10;
     padding: 6px 0;
+    margin-top: 1rem;
 }
+
 .visibility{
     display:none;
 }
